guacamole/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: guacamole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13.4
        volumeMounts:
        - name: guacamole-db
          mountPath: /docker-entrypoint-initdb.d
          subPath: data/1
        - name: guacamole-db
          mountPath: /var/lib/postgresql/data\
          subPath: data/2
      volumes:
      - name: guacamole-db
        persistentVolumeClaim:
          claimName: guacamole-db-pvc
