guacamole/guacamole-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
  namespace: guacamole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacamole
  template:
    metadata:
      labels:
        app: guacamole
    spec:
      containers:
      - name: guacamole
        image: jwetzell/guacamole
        volumeMounts:
        - name: guacamole-client-vol
          mountPath: /drive
      volumes:
      - name: guacamole-client-vol
        persistentVolumeClaim:
          claimName: guacamole-client-pvc
