guacamole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: guacamole
  namespace: guacamole
spec:
  rules:
  - host: gc.pazon.work
    http:
      paths:
      - backend:
          service:
            name: guacamole
            port:
              number: 80
        path: /
        pathType: Prefix
